exports[`no-skip-test > invalid(1): import test from \"node:test\";\ntest.skip(\"title\", () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test.skip("title", () => {});

`;

exports[`no-skip-test > invalid(1): import test from \"node:test\";\ntest.skip(\"title\", () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test.skip("title", () => {});
    |      ^^^^ Do not skip tests.

Suggestion 1/1: Remove \`.skip\`.:
  1 | import test from "node:test";
  2 | test("title", () => {});

`;

exports[`no-skip-test > invalid(2): import {it} from \"node:test\";\nit.skip(\"title\", () => {}); 1`] = `

  1 | import {it} from "node:test";
  2 | it.skip("title", () => {});

`;

exports[`no-skip-test > invalid(2): import {it} from \"node:test\";\nit.skip(\"title\", () => {}); 2`] = `

Message:
  1 | import {it} from "node:test";
> 2 | it.skip("title", () => {});
    |    ^^^^ Do not skip tests.

Suggestion 1/1: Remove \`.skip\`.:
  1 | import {it} from "node:test";
  2 | it("title", () => {});

`;

exports[`no-skip-test > invalid(3): import {describe} from \"node:test\";\ndescribe.skip(\"title\", () => {}); 1`] = `

  1 | import {describe} from "node:test";
  2 | describe.skip("title", () => {});

`;

exports[`no-skip-test > invalid(3): import {describe} from \"node:test\";\ndescribe.skip(\"title\", () => {}); 2`] = `

Message:
  1 | import {describe} from "node:test";
> 2 | describe.skip("title", () => {});
    |          ^^^^ Do not skip tests.

Suggestion 1/1: Remove \`.skip\`.:
  1 | import {describe} from "node:test";
  2 | describe("title", () => {});

`;

exports[`no-skip-test > invalid(4): import test from \"node:test\";\ntest(\"title\", {skip: true}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("title", {skip: true}, () => {});

`;

exports[`no-skip-test > invalid(4): import test from \"node:test\";\ntest(\"title\", {skip: true}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("title", {skip: true}, () => {});
    |                ^^^^^^^^^^ Do not skip tests.

`;

exports[`no-skip-test > invalid(5): import test from \"node:test\";\ntest(\"title\", {skip: \"not ready\"}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("title", {skip: "not ready"}, () => {});

`;

exports[`no-skip-test > invalid(5): import test from \"node:test\";\ntest(\"title\", {skip: \"not ready\"}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("title", {skip: "not ready"}, () => {});
    |                ^^^^^^^^^^^^^^^^^ Do not skip tests.

`;

exports[`no-skip-test > invalid(6): import * as nodeTest from \"node:test\";\nnodeTest.test.skip(\"title\", () => {}); 1`] = `

  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test.skip("title", () => {});

`;

exports[`no-skip-test > invalid(6): import * as nodeTest from \"node:test\";\nnodeTest.test.skip(\"title\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from "node:test";
> 2 | nodeTest.test.skip("title", () => {});
    |               ^^^^ Do not skip tests.

Suggestion 1/1: Remove \`.skip\`.:
  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test("title", () => {});

`;
